--- a/nodeServer/package.json
+++ b/nodeServer/package.json
@@ -4,11 +4,13 @@
   "description": "this is our server for ichat application",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node ./nodeServer/index.js"
   },
   "author": "Ankit",
   "license": "ISC",
   "dependencies": {
+    "express": "^4.18.1",
     "nodemon": "^2.0.16",
     "socket.io": "^4.5.0"
   }
