--- a/nodeServer/package.json
+++ b/nodeServer/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node ./nodeServer/index.js"
+    "start": "node nodeServer/app.js"
   },
   "author": "Ankit",
   "license": "ISC",
